--- a/components/footer.html
+++ b/components/footer.html
@@ -1,6 +1,1 @@
-<h1>Rent A Car</h1>
-<nav>
-  <a href="#search">Araçlar</a> |
-  <a href="#booking">Rezervasyon</a>
-</nav>
-
+<p>&copy; 2025 Rent A Car. Tüm hakları saklıdır.</p>
